[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-error = "0.1.0"

[[bin]]
name = "day1"
path = "src/aoc2021/day1.rs"

[[bin]]
name = "day2"
path = "src/aoc2021/day2.rs"

[[bin]]
name = "day3"
path = "src/aoc2021/day3.rs"

[[bin]]
name = "day4"
path = "src/aoc2021/day4.rs"